# lab4-bmp-graph-generator

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/graph/: Graph.cpp  Graph.h
src/graph/algo/: FruchtermanReingold.cpp  FruchtermanReingold.h
src/image/: BMP.cpp  BMP.h  DigitsDrawer.h
src/math/: Point2D.cpp  Point2D.h  Vector2D.cpp  Vector2D.h  structures.cpp  structures.h
